--- a/rmchristmas.html
+++ b/rmchristmas.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <canvas class="webgl"></canvas>
-<h1><small>With</small> Seasonal Wishes <small>from</small><span class="company"> RODING Mobility</span></h1>
+<h1><span class="company">RODING Mobility </span><small>wishes you a</small> Merry Christmas</h1>
 <button id="play-music" type="button">Play animation</button>
 <footer>
   <p></p>
